added Newsletter section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
           </div>
         </div>
    
-         </div>  
+         </div>
+         <div class="quote-section">
+          <p class="younus-quote">Money begets money. If you don't have that, you wait around to be hired by somebody at the mercy of others. If you have that money in your hand, you desperately try to make the best use of it and move ahead. And that's generating income for yourself.</p>
+          <h4 class="name">Dr. Muhammad Yunus</h4>
+          <p class="younus-quote">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>  
       </section>
       <section class="recent-news">
           <h2 class="common-heading">Recent News</h2>
@@ -163,6 +168,21 @@
 
       </div>
 
+      </section>
+     <!-- Newsletter-section -->
+      <section class="newsletter-section">
+        <div class="news-div">
+          <h2 class="news-title">Subscribe Newsletter</h2>
+          <p class="news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.
+
+          </p>
+          <div class="input-btn">
+            <input type="text" placeholder="Enter your email here" class="input-style">
+            <button class="subscribe-btn">Subscribe</button>
+          </div>
+          <p class="news-description">We promise not to spam you!</p>
+
+        </div>
       </section>
    
 
